--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ packages = [{include = "scrapy_german"}]
 python = "^3.10"
 requests = "^2.31.0"
 beautifulsoup4 = "^4.12.2"
+googletrans = "4.0.0rc1"
 
 
 [build-system]
